# research_agents

./: .gitignore  README.md  agents.py  main.py  pyproject.toml  requirements.txt  tasks.py
articles/: novo_post.md
config/: agents.json  tasks.json
db/: chroma.sqlite3
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat  docx2txt  jp.py  jsondiff  jsonpatch  jsonpointer
